--- a/.github/workflows/docker-build-deploy-inference.yml
+++ b/.github/workflows/docker-build-deploy-inference.yml
@@ -29,7 +29,13 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: maxscw/minimal-image-inference-engine
-          tags: latest engine $${{ github.sha }} $${{ env.SHORT_COMMIT }} $${{ env.CURRENT_DATE }} v0.2
+          tags: >
+            latest
+            engine
+            $${{ github.sha }}
+            $${{ env.SHORT_COMMIT }}
+            $${{ env.CURRENT_DATE }}
+            v0.2
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
