--- a/.github/workflows/docker-build-deploy-inference.yml
+++ b/.github/workflows/docker-build-deploy-inference.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Get current date
-        run: echo "CURRENT_DATE=$(date + '%Y-%m-%d')" >> $GITHUB_ENV
+        run: echo "CURRENT_DATE=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
 
       - name: Get short commit hash
         run: echo "SHORT_COMMIT=$(echo $GITHUB_SHA | cut -c 1-7)" >> $GITHUB_ENV
@@ -32,9 +32,9 @@ jobs:
           tags: |
             latest
             engine
-            date-$${{ github.sha }}
-            sha-$${{ env.SHORT_COMMIT }}
-            sha-$${{ env.CURRENT_DATE }}
+            sha{{ github.sha }}
+            sha$${{ env.SHORT_COMMIT }}
+            date$${{ env.CURRENT_DATE }}
             v0.2
 
       - name: Login to Docker Hub
