--- a/.github/workflows/docker-build-deploy-inference.yml
+++ b/.github/workflows/docker-build-deploy-inference.yml
@@ -32,7 +32,7 @@ jobs:
           tags: |
             latest
             engine
-            sha{{ github.sha }}
+            sha$${{ github.sha }}
             sha$${{ env.SHORT_COMMIT }}
             date$${{ env.CURRENT_DATE }}
             v0.2
