--- a/.github/workflows/docker-build-deploy-backend.yml
+++ b/.github/workflows/docker-build-deploy-backend.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - release
     paths:
+      - Backend.Dockerfile
       - .github/workflows/docker-build-deploy-backend.yml
 
 env:
@@ -35,7 +36,7 @@ jobs:
             sha$${{ github.sha }}
             sha$${{ env.SHORT_COMMIT }}
             date$${{ env.CURRENT_DATE }}
-            v0.2
+            v0.2.1
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
